# database-query-builder-api

./: .gitignore  Makefile  docker-compose.yml  manage.py  pyproject.toml
database_query_builder_api/: asgi.py  settings.py  urls.py  wsgi.py
internal/api/: apps.py  models.py  serializers.py  urls.py  views.py  viewsets.py
internal/api/migrations/: 0001_initial.py  0002_author_book.py
